force-app/main/default/objects/OrderItem/fields/BrandRelationshipLinkStatus__c.field-meta.xml
<CustomField>
    <fullName>BrandRelationshipLinkStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brand Relationship Link Status</label>
    <type>Checkbox</type>
</CustomField>