force-app/main/default/objects/OrderItem/fields/First_Use__c.field-meta.xml
<CustomField>
    <fullName>First_Use__c</fullName>
    <label>First Use</label>
    <length>255</length>
    <type>Text</type>
</CustomField>