force-app/main/default/objects/OrderItem/fields/IsFromTW__c.field-meta.xml
<CustomField>
    <fullName>IsFromTW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is From TW</label>
    <type>Checkbox</type>
</CustomField>