force-app/main/default/objects/OrderItem/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>[22-Sep-21 Khai] This is a debug field to query the OrderItem market based on the product selected</description>
    <formula>TEXT(Product2.Market__c)</formula>
    <label>Market</label>
    <type>Text</type>
</CustomField>