force-app/main/default/objects/OrderItem/fields/MC_MY_Sync_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>MC_MY_Sync_Eligibility__c</fullName>
    <formula>Order.MC_MY_Sync_Eligibility__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC MY Sync Eligibility</label>
    <type>Checkbox</type>
</CustomField>