force-app/main/default/objects/OrderItem/fields/OrderedFor__c.field-meta.xml
<CustomField>
    <fullName>OrderedFor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordered For</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AgeinMonths__c</field>
            <operation>greaterOrEqual</operation>
            <valueField>$Source.Product_Min_Birth_Month__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.AgeinMonths__c</field>
            <operation>lessOrEqual</operation>
            <valueField>$Source.Product_Max_Birth_Month__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>