force-app/main/default/objects/OrderItem/fields/Product_Max_Birth_Month__c.field-meta.xml
<CustomField>
    <fullName>Product_Max_Birth_Month__c</fullName>
    <label>Product Max Birth Month</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>