force-app/main/default/objects/OrderItem/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>PricebookEntry.Product2.Name</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>