force-app/main/default/objects/OrderItem/fields/PromoCode__c.field-meta.xml
<CustomField>
    <fullName>PromoCode__c</fullName>
    <label>Promo Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>