force-app/main/default/objects/OrderItem/fields/PromotionCode__c.field-meta.xml
<CustomField>
    <fullName>PromotionCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion Code</label>
    <referenceTo>PromotionCode__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>