force-app/main/default/objects/OrderItem/fields/PromotionItem__c.field-meta.xml
<CustomField>
    <fullName>PromotionItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion Item</label>
    <referenceTo>PromotionItem__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>