force-app/main/default/objects/OrderItem/fields/TotalPriceExclGst__c.field-meta.xml
<CustomField>
    <fullName>TotalPriceExclGst__c</fullName>
    <formula>UnitPriceExclGst__c * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price Excl Gst</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>