force-app/main/default/objects/OrderItem/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <description>[11-Jul-21 KSK] Auto-filled based on selected product</description>
    <formula>TEXT(Product2.Unit__c )</formula>
    <inlineHelpText>This field is auto populated based on the underlying product&apos;s unit</inlineHelpText>
    <label>Unit</label>
    <type>Text</type>
</CustomField>