force-app/main/default/objects/OrderItem/fields/UnitPriceExclGst__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceExclGst__c</fullName>
    <formula>If ( NOT( ISNULL(GST__c ) ),  UnitPrice - (GST__c / Quantity ) , UnitPrice )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price Excl Gst</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>