force-app/main/default/objects/OrderItem/validationRules/Order_Product_Restricted.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Product_Restricted</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!ISNEW(),
 !ISPICKVAL( Order.Status , &apos;Draft&apos;),
 !ISPICKVAL( Order.Status , &apos;Submitted&apos;),
 OR( 
CONTAINS($Profile.Name, &apos;ANI Call Center Agent&apos;), 
CONTAINS($Profile.Name, &apos;ANI Customer Service Agent&apos;)) 
)</errorConditionFormula>
    <errorMessage>Order Products are restricted once Order Status is Transferred and beyond.</errorMessage>
</ValidationRule>